--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,7 @@ body {
     margin: 0 auto;
     display: flex;
     justify-content: end;
-    gap: 25px;
+    gap: 35px;
     padding: 1.3rem 6rem 1.3rem 1.3rem;
 }
 
@@ -61,7 +61,7 @@ body {
 
     color: #cecacac4;
     padding-bottom: 0.2rem;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     transition: ease .2s;
 }
 
@@ -108,7 +108,7 @@ body {
 }
 
 #banner-gradient1 {
-    background: linear-gradient(to right, #000000, #000000dc, #000000a9);
+    background: linear-gradient(to right, #000000, #000000dc, #00000091);
     position: absolute;
     width: 100%;
     height: 550px;
@@ -241,7 +241,9 @@ body {
     margin: 0 auto;
     padding: 0 30px 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(440px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(440px), max-content));
+    gap: 2rem;
+    justify-content: center;
     justify-items: center;
     color: #F6F6F6;
 }
@@ -258,7 +260,7 @@ body {
 
     font-size: 1.2rem;
     padding-top: 40px;
-    max-width: 600px;
+    max-width: 550px;
 }
 
 
