--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,10 @@ body {
     overflow-x: hidden;
 }
 
+#principal {
+    overflow-x: hidden;
+}
+
 #menu {
 
     width: 100%;
@@ -38,7 +42,7 @@ body {
     right: 0;
     z-index: 2;
     cursor: pointer;
-    padding: 1rem;
+    padding: 1.3rem;
     visibility: hidden;
 }
 
