--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,9 +21,6 @@ body {
     overflow-x: hidden;
 }
 
-#principal {
-    overflow-x: hidden;
-}
 
 #menu {
 
@@ -246,7 +243,7 @@ body {
     padding: 0 30px 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(440px), max-content));
-    gap: 2rem;
+    gap: 1rem;
     justify-content: center;
     justify-items: center;
     color: #F6F6F6;
@@ -263,7 +260,7 @@ body {
 #about-info p {
 
     font-size: 1.2rem;
-    padding-top: 40px;
+    padding: 2rem 0rem 0rem;
     max-width: 550px;
 }
 
@@ -399,6 +396,7 @@ body {
 .card-image img {
 
     width: 100%;
+    background-size: cover;
     height: 220px;
     border-radius: 15px;
 }
@@ -452,6 +450,12 @@ body {
 
 }
 
+#contact .media-info .break{
+
+    display: none;
+
+}
+
 #contact .media-info:hover {
 
     background-position: right center;
@@ -466,6 +470,7 @@ body {
     width: 12%;
 
 }
+
 
 #division {
     border-color: #6bc2f9b6;
