--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,31 +1,45 @@
-@media (max-width: 1220px){
+@media (max-width: 1220px) {
 
     #projects-info {
         grid-template-columns: repeat(auto-fit, minmax(min(250px), max-content));
         justify-content: center;
         gap: 4.2rem;
     }
-    
+
+    .card-project {
+
+        transform: scale(0.95);
+
     }
 
-@media (max-width: 990px){
+}
+
+@media (max-width: 1024px) {
+
+    #projects-info {
+        grid-template-columns: repeat(auto-fit, minmax(min(270px), max-content));
+    }
+
+}
+
+@media (max-width: 990px) {
 
 
     #description1-title {
         font-size: 2rem;
         max-width: 250px;
-    
+
     }
-    
+
     #description2-title {
         font-size: 3.3rem;
         max-width: 330px;
-    
+
     }
 
     #description2 {
         padding-right: 0rem;
-    
+
     }
 
     #description2-title::after {
@@ -35,15 +49,15 @@
 
     #about-info {
         gap: 0.3rem;
-        
+
     }
 
 }
 
-
 @media (max-width: 940px) {
 
-    .fa-bars, .fa-xmark {
+    .fa-bars,
+    .fa-xmark {
 
         visibility: visible;
 
@@ -61,14 +75,14 @@
     #menu.show {
 
         right: 0;
-        
+
     }
 
 
-    #menu.active-menu{
-    
+    #menu.active-menu {
+
         background: linear-gradient(to bottom, #041b3de5, #0000009a);
-    
+
     }
 
     #itens {
@@ -78,22 +92,38 @@
         padding: 1.3rem 1.3rem 1.3rem 1.3rem;
     }
 
-  
+
     #itens .nav-link {
 
         position: absolute;
         left: 42%;
-        
+
     }
+
     #itens .nav-link::after {
 
         position: relative;
-        
+
     }
 }
 
 
-@media (max-width: 750px){
+@media (max-width: 820px) {
+
+    #projects-info {
+        grid-template-columns: repeat(auto-fit, minmax(min(340px), max-content));
+    }
+
+    .card-project {
+
+        transform: scale(1);
+
+    }
+
+}
+
+
+@media (max-width: 750px) {
 
     #banner-info {
         top: 8rem;
@@ -115,11 +145,11 @@
     }
 
     #about-info {
-    
+
         grid-template-columns: repeat(auto-fit, minmax(min(440px, 100%), 1fr));
     }
 
-    #about-info #img-perfil{
+    #about-info #img-perfil {
 
         width: 100%;
     }
@@ -127,9 +157,23 @@
     #contact .media-info {
 
         width: 100%;
-    
+
     }
 
+}
+
+@media (max-width: 470px) {
+
+    .card-project {
+
+        transform: scale(0.9);
+
+    }
+
+    #projects-info {
+
+        gap: 1rem;
+    }
 }
 
 
@@ -145,18 +189,13 @@
         font-size: 1rem;
     }
 
-    #projects-info {
 
-        gap: 1rem;
-    }
-    
-
-    #contact .media-info h3{
+    #contact .media-info h3 {
 
         font-size: 0.8rem;
         width: 100%;
         text-wrap: wrap;
-    
+
     }
 
 }
@@ -164,43 +203,35 @@
 @media (max-width: 390px) {
 
     .card-project {
-        
+
         transform: scale(0.8);
-        
+
+    }
+
+    #projects-info {
+
+        gap: 0;
     }
 }
 
 @media (max-width: 350px) {
 
-    #projects-info {
-        grid-template-columns: repeat(auto-fit, minmax(min(265px), max-content));
-    }
-
-}
-
-@media (max-width: 320px) {
-
     #description1-title {
         font-size: 1.7rem;
         max-width: 250px;
-    
+
     }
 
     #description1-title::after {
 
         width: 65px;
-    
+
     }
 
-    #description2 {
-        padding-right: 2rem;
-    
-    }
-    
     #description2-title {
         font-size: 2.8rem;
         max-width: 330px;
-    
+
     }
 
     #description2-title::after {
@@ -210,22 +241,44 @@
 
     #description2-info {
         font-size: 1.1rem;
-        
+
     }
 
-    #about-info {
+    #description2 {
+        padding-right: 2rem;
+
+    }
     
+    #projects-info {
+        grid-template-columns: repeat(auto-fit, minmax(min(285px), max-content));
+    }
+
+}
+
+@media (max-width: 320px) {
+
+
+    #about-info {
+
         grid-template-columns: repeat(auto-fit, minmax(min(220px), 1fr));
     }
 
 
-    #contact .media-info .break{
+    #contact .media-info .break {
 
         display: block;
-    
+
+    }
+
+    @media (max-width: 300px) {
+
+        .card-project {
+
+            transform: scale(0.73);
+
+        }
     }
 
 
 
 }
-
