--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -54,9 +54,7 @@
 
     #about-info p {
 
-        font-size: 1.2rem;
         padding: 2rem 0rem 0rem;
-        max-width: 515px;
     }
     
 
@@ -70,6 +68,12 @@
 
         visibility: visible;
 
+    }
+
+    #itens .icons {
+
+        display: block;
+        padding-bottom: 7px;
     }
 
     #bgsub-menu {
@@ -103,16 +107,21 @@
     #itens {
         flex-direction: column;
         align-items: center;
-        gap: 50px;
+        gap: 26px;
+        margin-top: 4rem;
         padding: 1.3rem 1.3rem 1.3rem 1.3rem;
+        
     }
 
 
     #itens .nav-link {
 
-        position: absolute;
-        left: 42%;
-
+        color: #cecacac4;
+        font-size: 1.1rem;
+        transition: ease .2s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     #itens .nav-link::after {
@@ -177,6 +186,7 @@
 
 }
 
+
 @media (max-width: 470px) {
 
     .card-project {
@@ -193,6 +203,17 @@
 
 
 @media (max-width: 425px) {
+
+
+    .section {
+
+        margin-top: 4rem;
+    }
+
+    .section-title {
+
+        font-size: 1.7rem;
+    }
 
 
     #about {
@@ -217,9 +238,16 @@
 
 @media (max-width: 390px) {
 
+
     .card-project {
 
         transform: scale(0.8);
+
+    }
+
+    #project-title {
+
+        padding-bottom: 2.2rem;
 
     }
 
